syntax = "proto3";

option go_package = "./;simple";

package proto;


message SimpleRequest{
  // 定义发送的参数，一般采用骆驼峰命名，小写加下划线，比如，student_name
  // 参数类型 参数名 标识号(不可重复)
  string data = 1;
}

message SimpleResponse{
  // 定义响应的参数
  // 参数类型 参数名 标识号 (不可重复)
  int32 code = 1;
  string value = 2;
}



// 定义流式响应
message StreamResponse{
  // 流式响应数据
  string stream_value = 1;
}

// 定义服务（可定义多个服务,每个服务可定义多个接口）
service StreamServer{
  rpc Route(SimpleRequest) returns (SimpleResponse){};

  // 服务端流式rpc，在响应数据前添加stream
  rpc ListValue(SimpleRequest) returns(stream StreamResponse){};
}